<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Generic -->
    <string name="app_name">Auto-Away</string>
    <string name="app_version">0.1</string>
    
    <!-- General Title -->
    <string name="general_title">General</string>
    
    <!-- Service -->
    <string name="service_title">Start</string>
    <string name="service_summary">Starts the Auto-Away service</string>
    
    <!-- Silent -->
    <string name="silent_title">Silence on Start</string>
    <string name="silent_summary">Silence all sounds except media &amp; alarms on service start</string>
    
    <!-- Preferences Title -->
    <string name="preferences_title">Preferences</string>
    
    <!-- Message -->
    <string name="message_title">Custom Message</string>
    <string name="message_summary">Message to send out when a text is received</string>
    <string name="message_content">Hey, I\'m busy, I\'ll talk to you later</string>
    
    <!-- Inform -->
    <string name="inform_title">Inform Recipient</string>
    <string name="inform_summary">Adds an "Auto-Away" prefix to your custom message</string>
    
    <!-- Response Delay -->
    <string name="delay_title">Response Delay</string>
    <string name="delay_summary">Time (in seconds) to delay message response</string>
    
    <!-- Log -->
    <string name="log_title">Notification Log</string>
    <string name="log_summary">Shows how many Auto-Away responses were sent out</string>
    
    <!-- Repeat -->
    <string name="repeat_title">Repeat Reponses</string>
    <string name="repeat_summary">Respond two or more times during a service lifecycle</string>
    
    <!-- Notification Message -->
    <string name="notification_ticker_text">Auto-Away Service now running</string>
    <string name="notification_ticker_text_2">Auto replied to</string>
    <string name="notification_title">Auto-Away</string>
    <string name="notification_content">Auto-Away is currently running</string>
<<<<<<< HEAD
    
    <!-- Notification Log -->
    <string name="nlog_ticker_text">Auto replied to</string>
    <string name="nlog_title">Auto Replied</string>
    <string name="nlog_content">Auto replied</string>
    <string name="nlog_content_2">to</string>
    <string name="nlog_content_3">times</string>
=======

>>>>>>> 0c64c86dd816308a4d3b05dc4b0b0840be617092
</resources>